--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,40 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainAct">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="자연 재해"
-                    android:textSize="@dimen/dp_25"/>
+    <!--<com.astuetz.PagerSlidingTabStrip-->
+        <!--android:id="@+id/tabs"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/dp_48" />-->
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/main_listview_recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/testtest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="자연 재해"
+            android:textSize="@dimen/dp_25"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_listview_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp" />
+    </LinearLayout>
 
 
 
-            </LinearLayout>
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/viewpager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/white" />-->
+
+
 
 </RelativeLayout>
