--- a/app/src/main/res/layout/activity_article_list.xml
+++ b/app/src/main/res/layout/activity_article_list.xml
@@ -13,11 +13,11 @@
         android:background="@color/accent_material_dark" />
 
 
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/article_list_listview_recycler"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-    <!--</android.support.v7.widget.RecyclerView>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/article_list_listview_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
