--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,10 @@
             android:layout_width="@dimen/dp_47"
             android:layout_height="match_parent"
             android:gravity="center">
-
             <ImageView
                 android:layout_width="@dimen/dp_16.5"
                 android:layout_height="@dimen/dp_15.5"
                 android:background="@drawable/main_icon_guide_50x46" />
-
         </LinearLayout>
 
         <View
@@ -33,52 +31,23 @@
             android:layout_width="@dimen/dp_47"
             android:layout_height="match_parent"
             android:gravity="center">
-
             <ImageView
                 android:layout_width="@dimen/dp_16.5"
                 android:layout_height="@dimen/dp_16"
                 android:background="@drawable/main_icon_search_50x48" />
-
-
         </LinearLayout>
-
-
     </LinearLayout>
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
-        android:background="@color/c_ff272727"
-
-        />
+        android:background="@color/c_ff272727"  />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/testtest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="자연 재해"
-            android:textSize="@dimen/dp_25" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/main_listview_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp" />
-    </LinearLayout>
-
 
 </LinearLayout>
