--- a/app/src/main/res/layout/fragment_main_viewpager_ready_disaster.xml
+++ b/app/src/main/res/layout/fragment_main_viewpager_ready_disaster.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/abc_search_url_text_normal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/testtest"
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_listview_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="자연 재해"
-        android:textSize="@dimen/dp_25"/>
+        android:layout_height="match_parent" />
+
+
 
 </LinearLayout>
+
