--- a/app/src/main/res/layout/item_main_image.xml
+++ b/app/src/main/res/layout/item_main_image.xml
@@ -7,13 +7,25 @@
     <ImageView
         android:id="@+id/item_iv_main"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="@dimen/dp_126"
+        android:layout_marginBottom="@dimen/dp_3"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:background="@color/abc_search_url_text_normal"/>
+        android:scaleType="centerCrop" />
 
-    <TextView
+    <ImageView
+        android:id="@+id/item_iv_locked_image"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="@dimen/dp_50"
+        android:background="@drawable/main_icon_lock" />
+
+    <com.survivalsos.goldentime.common.view.LatoBlackTextView
+        android:id="@+id/item_tv_image_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="항목의 이름입니다 "/>
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_12.5"
+        android:text="항목의 이름입니다"
+        android:textColor="@color/c_ffffffff"
+        android:textStyle="bold" />
 </FrameLayout>
