검색 그리드뷰 붙이기 전
6월 26일 마감일 미준수…
오늘의 말씀을 잊지말자…
마감일을 가볍게 여기지 말자
여긴 학교가 아니다. 사회이다.
이런 일 또있으면 내 발로 나갈 각오하자

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,7 @@
             />
 
         <LinearLayout
+            android:id="@+id/linearlayout_search"
             android:layout_width="@dimen/dp_47"
             android:layout_height="match_parent"
             android:gravity="center">
