--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -140,6 +140,13 @@
     <color name="c_ff500690">#ff500690</color>
     <color name="c_ff138185">#ff138185</color>
     <color name="c_ff9090A1">#ff9090A1</color>
+    <color name="c_ff828282">#ff828282</color>
+    <color name="c_ffE0E0E0">#ffE0E0E0</color>
+    <color name="c_ff325157">#ff325157</color>
+    <color name="c_ff113339">#ff113339</color>
+    <color name="c_ff191021">#ff191021</color>
+
+
 
 
 
