--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -144,9 +144,12 @@
     <color name="c_ff828282">#ff828282</color>
     <color name="c_ffE0E0E0">#ffE0E0E0</color>
     <color name="c_ff325157">#ff325157</color>
+    <color name="c_22325157">#22325157</color>
     <color name="c_ff113339">#ff113339</color>
     <color name="c_ff191021">#ff191021</color>
     <color name="c_ff222222">#222222</color>
+    <color name="c_80DCDCDC">#80DCDCDC</color>
+    <color name="c_8028484E">#8028484E</color>
 
 
 
