--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -49,7 +49,8 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
-        android:background="@color/c_ff272727"  />
+        android:background="@color/c_ff272727"
+        android:textColor="@drawable/tab_text_color"/>
 
     <!--뷰페이져-->
     <android.support.v4.view.ViewPager
