--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -150,6 +150,9 @@
     <color name="c_ff222222">#222222</color>
     <color name="c_80DCDCDC">#80DCDCDC</color>
     <color name="c_8028484E">#8028484E</color>
+    <color name="c_ff4428484E">#8028484E</color>
+    <color name="c_ff2E2E2E">#ff2E2E2E</color>
+    <color name="c_ffD0D0D0">#ffD0D0D0</color>
 
 
 
