--- a/app/src/main/res/layout/activity_check_list.xml
+++ b/app/src/main/res/layout/activity_check_list.xml
@@ -1,90 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="com.survivalsos.goldentime.activity.CheckListAct">
+
+
+    <!--헤더 영역-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:background="@color/c_ff171717">
+
+        <LinearLayout
+            android:id="@+id/linearlayout_check_list_back"
+            android:layout_width="@dimen/dp_47"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="@dimen/dp_17"
+                android:layout_height="@dimen/dp_14.5"
+                android:background="@drawable/icon_back" />
+        </LinearLayout>
+
+        <com.survivalsos.goldentime.common.view.NanumGothicBoldTextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="체크리스트"
+            android:textColor="@color/c_ffffffff" />
+
+        <LinearLayout
+            android:id="@+id/linearlayout_checklist_new"
+            android:layout_width="@dimen/dp_47"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="@dimen/dp_16"
+                android:layout_height="@dimen/dp_18"
+                android:background="@drawable/icon_new" />
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="@dimen/dp_46.6"
+        android:background="@color/c_ff2E2E2E"
+        android:orientation="horizontal">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:visibility="gone"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.AppBarLayout>
-
-        <!--헤더 영역-->
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:background="@color/c_ff171717">
-
-            <LinearLayout
-                android:id="@+id/linearlayout_open_drawer"
-                android:layout_width="@dimen/dp_47"
-                android:layout_height="match_parent"
-                android:gravity="center">
+            android:id="@+id/linearlayout_check_list_all"
+            android:layout_marginLeft="@dimen/dp_23.5"
+            android:layout_width="@dimen/dp_75"
+            android:layout_height="match_parent">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <ImageView
-                    android:layout_width="@dimen/dp_17"
-                    android:layout_height="@dimen/dp_14.5"
-                    android:background="@drawable/icon_back" />
-            </LinearLayout>
-
-            <com.survivalsos.goldentime.common.view.NanumGothicBoldTextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textColor="@color/c_ffffffff"
-                android:text="체크리스트"
-                android:gravity="center"/>
-
-            <LinearLayout
-                android:layout_width="@dimen/dp_47"
-                android:layout_height="match_parent"
-                android:gravity="center">
-
+                    android:layout_width="@dimen/dp_43.5"
+                    android:layout_height="@dimen/dp_10"
+                    android:background="@drawable/check_list_t_all"
+                    android:layout_gravity="center"/>
+                
                 <ImageView
-                    android:layout_width="@dimen/dp_16"
-                    android:layout_height="@dimen/dp_18"
-                    android:background="@drawable/icon_new" />
-            </LinearLayout>
+                    android:layout_width="@dimen/dp_73"
+                    android:layout_height="@dimen/dp_3.5"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/check_list_underline_indicator"/>
+            </FrameLayout>
+
         </LinearLayout>
 
-        <com.astuetz.PagerSlidingTabStrip
-            android:id="@+id/pager_tab_strip"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:layout_gravity="top"
-            android:background="@color/c_ff1c1c1c"
-            android:textColor="@color/c_ff828282" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/container"
-            android:layout_width="match_parent"
+        <View
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
+            android:layout_weight="1"></View>
+
+        <LinearLayout
+            android:id="@+id/linearlayout_check_list_import"
+            android:layout_width="@dimen/dp_75"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="@dimen/dp_66"
+                android:layout_height="@dimen/dp_12"
+                android:background="@drawable/check_list_t_import"/>
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></View>
+
+
+        <LinearLayout
+            android:id="@+id/linearlayout_check_list_add"
+            android:layout_marginRight="@dimen/dp_23.5"
+            android:layout_width="@dimen/dp_75"
+            android:layout_height="match_parent"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="@dimen/dp_44.5"
+                android:layout_height="@dimen/dp_16.5"
+                android:background="@drawable/check_list_t_add"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</android.support.design.widget.CoordinatorLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/checklist_all_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+</LinearLayout>
