--- a/app/src/main/res/layout/item_checklist_import_list.xml
+++ b/app/src/main/res/layout/item_checklist_import_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_checklist_all_list_click_area"
+    android:id="@+id/item_checklist_import_list_click_area"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -9,32 +9,16 @@
     <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/item_checklist_all_header" />
+        layout="@layout/item_checklist_import_header" />
 
     <LinearLayout
+        android:id="@+id/linearlayout_checklist_import_add"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_43.5"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/item_checklist_all_checkbox_click_area"
-            android:layout_width="@dimen/dp_43.5"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:visibility="visible">
-            <ImageView
-                android:id="@+id/item_checklist_img_check"
-                android:layout_width="@dimen/dp_16.5"
-                android:layout_height="@dimen/dp_12.5"
-                android:background="@drawable/check_list_icon_check" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="@dimen/dp_1"
-            android:layout_height="match_parent"
-            android:background="@color/c_ffD0D0D0"></LinearLayout>
-        
         <com.survivalsos.goldentime.common.view.LatoBlackTextView
             android:id="@+id/tv_checklist_title"
             android:layout_width="wrap_content"
@@ -42,7 +26,7 @@
             android:layout_marginLeft="@dimen/dp_10"
             android:text="항목의 이름입니다"
             android:textSize="@dimen/dp_14"
-            android:textColor="@color/c_ff272727"/>
+            android:textColor="@color/c_ffffffff"/>
 
         <View
             android:layout_width="0dp"
@@ -51,22 +35,18 @@
 
 
         <LinearLayout
-            android:id="@+id/linearlayout_checklist_all_trash"
             android:layout_width="@dimen/dp_50"
             android:layout_height="match_parent"
             android:gravity="center">
             <ImageView
                 android:id="@+id/iv_checklist_trash_icon"
-                android:layout_width="@dimen/dp_17"
-                android:layout_height="@dimen/dp_18"
-                android:background="@drawable/check_list_icon_delete"
+                android:layout_width="@dimen/dp_25"
+                android:layout_height="@dimen/dp_25"
+                android:background="@drawable/check_list_import_check_all_00"
                 />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:background="@color/c_ffD0D0D0"></LinearLayout>
+
 
 </LinearLayout>
