--- a/app/src/main/res/layout/activity_check_list.xml
+++ b/app/src/main/res/layout/activity_check_list.xml
@@ -124,7 +124,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/checklist_all_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
