개별 체크리스트 불어오는 부분 수정해야함 (디비 메소드 여러개 만들지 말 것)
의심되는 에러 : 처음 실행 시 디비 생성 때 나는 오류

--- a/app/src/main/res/layout/content_article_detail.xml
+++ b/app/src/main/res/layout/content_article_detail.xml
@@ -68,18 +68,45 @@
             <WebView
                 android:id="@+id/webView_article_detail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <LinearLayout
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_33.5"
-                android:layout_marginLeft="@dimen/dp_24"
-                android:gravity="center">
-                <ImageView
-                    android:id="@+id/img_bookmark"
-                    android:layout_width="@dimen/dp_24"
-                    android:layout_height="@dimen/dp_20.5"
-                    android:background="@drawable/sub_icon_checkbox" />
+                android:id="@+id/speaker"
+                android:layout_width="@dimen/dp_45.5"
+                android:layout_height="@dimen/dp_45.5"
+                android:layout_gravity="center"
+                android:background="@drawable/speaker11"
+                android:visibility="gone"
+                ></LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/img_having_checklist"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_43.5"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="@dimen/dp_48"
+                    android:layout_height="@dimen/dp_33.5"
+                    android:layout_marginLeft="@dimen/dp_24"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="@dimen/dp_24"
+                        android:layout_height="@dimen/dp_20.5"
+                        android:background="@drawable/sub_icon_checkbox" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_24"
+                    android:text="체크리스트에 담기"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="@dimen/dp_16"
+                    android:textStyle="bold" />
             </LinearLayout>
 
 
@@ -87,9 +114,8 @@
                 android:id="@+id/article_detail_listview"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_87"
-                android:dividerHeight="0dp"
-                android:divider="#ffffff" ></ListView>
-
+                android:divider="#ffffff"
+                android:dividerHeight="0dp"></ListView>
 
 
         </LinearLayout>
@@ -106,8 +132,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_43.5"
-        android:background="@color/c_fff4f3f3"
-        android:layout_gravity="bottom|center">
+        android:layout_gravity="bottom|center"
+        android:background="@color/c_fff4f3f3">
 
         <LinearLayout
             android:id="@+id/linearlayout_icon_home"
@@ -115,6 +141,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
+
             <ImageView
                 android:layout_width="@dimen/dp_22"
                 android:layout_height="@dimen/dp_19.5"
@@ -127,6 +154,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
+
             <ImageView
                 android:layout_width="@dimen/dp_10"
                 android:layout_height="@dimen/dp_18"
@@ -139,10 +167,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
+
             <ImageView
-            android:layout_width="@dimen/dp_18.5"
-            android:layout_height="@dimen/dp_14.5"
-            android:background="@drawable/sub_icon_list" />
+                android:layout_width="@dimen/dp_18.5"
+                android:layout_height="@dimen/dp_14.5"
+                android:background="@drawable/sub_icon_list" />
         </LinearLayout>
 
         <LinearLayout
@@ -151,14 +180,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
+
             <ImageView
                 android:layout_width="@dimen/dp_18.5"
                 android:layout_height="@dimen/dp_18"
                 android:background="@drawable/sub_icon_top" />
         </LinearLayout>
     </LinearLayout>
-
-
 
 
 </LinearLayout>
