--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -153,7 +153,8 @@
     <color name="c_ff4428484E">#8028484E</color>
     <color name="c_ff2E2E2E">#ff2E2E2E</color>
     <color name="c_ffD0D0D0">#ffD0D0D0</color>
-
+    <color name="c_802E2E2E">#802E2E2E</color>
+    <color name="c_4D2E2E2E">#BD2E2E2E</color>
 
 
 
