--- a/app/src/main/res/layout/activity_add_check_list.xml
+++ b/app/src/main/res/layout/activity_add_check_list.xml
@@ -1,13 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/guide_bg"
+    android:orientation="vertical"
     tools:context="com.survivalsos.goldentime.activity.AddCheckListAct">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@android:color/transparent">
+
+
+        <!--헤더 영역-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            android:background="@color/c_ff171717">
+
+            <LinearLayout
+                android:id="@+id/linearlayout_check_list_add_close_xx"
+                android:layout_width="@dimen/dp_47"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_16.5"
+                    android:layout_height="@dimen/dp_16"
+                    android:background="@drawable/drawer_close_x" />
+            </LinearLayout>
+
+            <com.survivalsos.goldentime.common.view.NanumGothicBoldTextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="직접 추가하기"
+                android:textColor="@color/c_ffffffff" />
+
+            <LinearLayout
+                android:layout_width="@dimen/dp_47"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearlayout_add_check_list_blur"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/c_4D2E2E2E"
+            android:orientation="vertical">
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_150"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:layout_margin="@dimen/dp_20"
+            android:background="@drawable/act_add_checklist_et_bg"
+            android:gravity="center">
+
+            <com.survivalsos.goldentime.common.view.NanumGothicEditView
+                android:id="@+id/edittext_input_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint=""
+                android:imeOptions="actionDone"
+                android:maxLines="1"
+                android:singleLine="true" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+</FrameLayout>
